# stealth-chat

./: .gitignore  INSTRUCCIONES.md  README.md  SETUP-GITHUB.md  index.html  package-lock.json  package.json  publish.ps1
src/: App.tsx  Mascot.tsx  db.ts  main.tsx  peer.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
